# CPP-CMake-CodeCoverage-Demo

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
models/: CMakeLists.txt
models/include/: employee.h
models/src/: employee.cpp
test/: CMakeLists.txt  employee_unittest.cpp  main.cpp
